LineStyle appears in Outliner by default though Freestyle is not enabled #37070

Closed
opened 2013-10-14 08:12:40 +02:00 by Shinsuke Irie · 5 comments
Member

%%%--- Operating System, Graphics card ---

Ubuntu 13.10 amd64 + GeForce GTX 670

- Blender version with error, and version that worked ---

r60379

- Short description of error ---

It's confusing that the Outliner always shows LineStyle even when not using either Freestyle or BI renderer.
I think a line set shouldn't be included in the default settings and should be added manually (or automatically) when using Freestyle.

BTW, LineStyle cannot be unlinked by right click menu on the Outliner. I get a warning "Not yet implemented" instead.
Tamito-san, did you forget to implement this?
%%%

%%%--- Operating System, Graphics card --- Ubuntu 13.10 amd64 + GeForce GTX 670 - Blender version with error, and version that worked --- r60379 - Short description of error --- It's confusing that the Outliner always shows LineStyle even when not using either Freestyle or BI renderer. I think a line set shouldn't be included in the default settings and should be added manually (or automatically) when using Freestyle. BTW, LineStyle cannot be unlinked by right click menu on the Outliner. I get a warning "Not yet implemented" instead. Tamito-san, did you forget to implement this? %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fix for the outliner issue was committed in trunk revision 60756. Thanks for the problem report.

The unlink operation on line style data blocks is in fact intended not to work by purpose. It is recalled that every line set has a line style associated to it, and the link between them cannot be removed (in contrast, a world data block for example can be unlinked from a scene). I think the present warning message (i.e., "Not yet implemented") is inappropriate. Something like "Cannot unlink" would make more sense to me. There are many other examples of data blocks that cannot be unlinked (e.g., camera and lamp data blocks), and the same "not yet implemented" warning is displayed too. For consistency the same warning message updates should be applied for all data blocks that cannot be unlinked. A better solution is to disable the Unlink operation of the outliner menu when the operation is not supported.%%%

%%%Fix for the outliner issue was committed in trunk revision 60756. Thanks for the problem report. The unlink operation on line style data blocks is in fact intended not to work by purpose. It is recalled that every line set has a line style associated to it, and the link between them cannot be removed (in contrast, a world data block for example can be unlinked from a scene). I think the present warning message (i.e., "Not yet implemented") is inappropriate. Something like "Cannot unlink" would make more sense to me. There are many other examples of data blocks that cannot be unlinked (e.g., camera and lamp data blocks), and the same "not yet implemented" warning is displayed too. For consistency the same warning message updates should be applied for all data blocks that cannot be unlinked. A better solution is to disable the Unlink operation of the outliner menu when the operation is not supported.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

%%%If Freestyle is enabled, the line style still can appear even when not using BI render, though Freestyle needs the BI render.

I agree with you about the unlink issue and added it to the TODO list: http://wiki.blender.org/index.php/Dev:2.5/Source/Development/Todo/Editors#Outliner
%%%

%%%If Freestyle is enabled, the line style still can appear even when not using BI render, though Freestyle needs the BI render. I agree with you about the unlink issue and added it to the TODO list: http://wiki.blender.org/index.php/Dev:2.5/Source/Development/Todo/Editors#Outliner %%%

%%%Thanks again for testing. A fix was committed in trunk revision 60763 to check if the Blender Internal is used.%%%

%%%Thanks again for testing. A fix was committed in trunk revision 60763 to check if the Blender Internal is used.%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37070
No description provided.