Fix for #37070: LineStyle appears in Outliner by default though Freestyle is not enabled.