source/blender/editors/space_outliner/outliner_tree.c
@@ -429,7 +429,8 @@ static void outliner_add_scene_contents(SpaceOops *soops, ListBase *lb, Scene *s
 	
 	outliner_add_element(soops,  lb, sce->world, te, 0, 0);
 	
-	outliner_add_line_styles(soops, lb, sce, te);
+	if (sce->r.mode & R_EDGE_FRS)
+		outliner_add_line_styles(soops, lb, sce, te);
 }
 
 // can be inlined if necessary
